# ciflex-samples

./: .gitignore  README.md  _config.yml
_includes/: head-custom.html
docs/: README.md
docs/ciflex/: README.md
docs/constants/: README.md
docs/plugins/: README.md
docs/props/: README.md
docs/schema/: README.md
docs/stage/: README.md
docs/types/: README.md
docs/utils/: README.md
plugins/: README.md
plugins/0.18-Trivy:Gradle/: Dockerfile  plugin.yaml
plugins/0.18-Trivy:Maven/: Dockerfile  plugin.yaml
plugins/0.18-Trivy:Python/: Dockerfile  plugin.yaml
plugins/3.12-PiP/: Dockerfile  plugin.yaml
plugins/3.12-Poetry/: Dockerfile  plugin.yaml
plugins/3.19-Alpine/: plugin.yaml
plugins/3.9-Maven/: Dockerfile  plugin.yaml
plugins/4.27-DinD/: Dockerfile  (+1 more)
python-pip/: pipeline.yaml  requirements.txt
python-poetry/: pipeline.yaml  pyproject.toml
python-poetry/app/: main.py
python-poetry/app/api/: group_routers.py
python-poetry/app/api/middlewares/: try_except_middleware.py
python-poetry/app/logging/: conf.yaml
python-poetry/app/utils/: info.py
python-poetry/tests/: test_structure.py
python-poetry/tests/test_api/test_routes/: test_health.py  test_info.py  test_root.py  test_sleep.py
python-poetry/tests/test_core/: test_events.py
python-poetry/tests/test_logging/: test_custom_formatter.py
python-poetry/yaml/: build-reports.yaml
springboot-gradle/: build.gradle  deployment.yaml  pipeline.properties  pipeline.yaml
springboot-kotlin/: build.gradle.kts  pipeline.yaml
springboot-maven/: deployment.yaml  pipeline.yaml  pom.xml
(+61 files in other folders)
