[tool.poetry]
name = "python-poetry"
version = "1.0.0"
description = "shinto samples"
authors = ["mrwconsulting"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.2"
uvicorn = "0.29.0"
requests = "^2.31.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
certifi = "2024.2.2"
click = "8.1.7"
coverage = "7.5.0"
fastapi-profiler = "1.3.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
iniconfig = "2.0.0"
isort = "5.13.2"
packaging = "24.0"
pluggy = "1.5.0"
pyyaml = "6.0.1"
pydantic-settings = "2.2.1"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pyinstrument = "4.6.2"
pytest-cov = "5.0.0"
pytest-html = "4.1.1"
pytest-mock = "3.14.0"
pytest-ruff = "0.3.1"
pytest = "8.2.0"
python-dotenv = "1.0.1"
python-json-logger = "2.0.7"
ruff = "0.4.2"
sniffio = "1.3.1"
starlette = "0.37.2"
typing-extensions = "4.11.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
httpx = "^0.27.0"
pre-commit = "^3.7.0"
tox = "^4.15.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"
